--- a/_dev/html/components/shared.html
+++ b/_dev/html/components/shared.html
@@ -176,21 +176,48 @@
             <div class="g-ctrl ld"></div>
             <img class="g-btn" src="images/game/btn-ld.png" alt=""/>
             <img class="g-hand" src="images/game/hand-ld.svg" alt=""/>
-            <div class="game">
-    
+            <img src="images/game/g-lu-0.svg" alt="" class="g-g lu"/>
+            <img src="images/game/g-lu-1.svg" alt="" class="g-g lu"/>
+            <img src="images/game/g-lu-2.svg" alt="" class="g-g lu"/>
+            <img src="images/game/g-lu-3.svg" alt="" class="g-g lu"/>
+            <img src="images/game/g-lu-4.svg" alt="" class="g-g lu"/>
+            <img src="images/game/g-ru-0.svg" alt="" class="g-g ru"/>
+            <img src="images/game/g-ru-1.svg" alt="" class="g-g ru"/>
+            <img src="images/game/g-ru-2.svg" alt="" class="g-g ru"/>
+            <img src="images/game/g-ru-3.svg" alt="" class="g-g ru"/>
+            <img src="images/game/g-ru-4.svg" alt="" class="g-g ru"/>
+            <img src="images/game/g-rd-0.svg" alt="" class="g-g rd"/>
+            <img src="images/game/g-rd-1.svg" alt="" class="g-g rd"/>
+            <img src="images/game/g-rd-2.svg" alt="" class="g-g rd"/>
+            <img src="images/game/g-rd-3.svg" alt="" class="g-g rd"/>
+            <img src="images/game/g-rd-4.svg" alt="" class="g-g rd"/>
+            <img src="images/game/g-ld-0.svg" alt="" class="g-g ld"/>
+            <img src="images/game/g-ld-1.svg" alt="" class="g-g ld"/>
+            <img src="images/game/g-ld-2.svg" alt="" class="g-g ld"/>
+            <img src="images/game/g-ld-3.svg" alt="" class="g-g ld"/>
+            <img src="images/game/g-ld-4.svg" alt="" class="g-g ld"/>
+            <div class="score in-game">
+                <div class="s-digits">
+                    <div class="s-d-inner"></div>
+                </div>
+            </div>
+            <div class="lives">
+                <img src="images/game/icon-heart.svg" alt=""/>
+                <img src="images/game/icon-heart.svg" alt=""/>
+                <img src="images/game/icon-heart.svg" alt=""/>
             </div>
         </div>
         <div class="block">
-            <div class="score">
+            <div class="score best">
                 <div class="s-h">Лучший среди всех игроков</div>
                 <div class="s-digits">
-                    <div>11</div>
+                    <div class="s-d-inner"></div>
                 </div>
             </div>
-            <div class="score">
+            <div class="score curr">
                 <div class="s-h">Твой результат</div>
                 <div class="s-digits">
-                    <div>20</div>
+                    <div class="s-d-inner"></div>
                 </div>
             </div>
             <div class="btn">Сыграть еще раз</div>
