--- a/_dev/scss/components/_game-pop.scss
+++ b/_dev/scss/components/_game-pop.scss
@@ -19,7 +19,10 @@
         @include trs('opacity #{$anim} ease-in-out');
       }
     }
-    &.other .g-bg~.g-bg{
+    &.other .g-bg+.g-bg{
+      opacity:0;
+    }
+    &.secret .g-bg+.g-bg+.g-bg{
       opacity:0;
     }
     &.gaming{
@@ -28,17 +31,18 @@
       }
     }
     .caller{
-      @include abs($t:3em,$l:3.7rem - .75rem);
-      width:3rem;
-      height:3rem;
+      @include abs($t:3em,$l:3.7rem - 1.66*.75rem);
+      width:1.66*3rem;
+      height:1.66*3rem;
       cursor:pointer;
-      visibility:hidden;
+      visibility:visible;
+      //visibility:hidden;
       z-index:1;
       -webkit-tap-highlight-color: rgba(0,0,0,0);
       background:url(#{$path}/icons/icon-game.svg) center/cover no-repeat;
-      .start &,.fromLoad &{
+      /*.start &,.fromLoad &{
         visibility:visible;
-      }
+      }*/
     }
     .inner{
       @include abs($l:-1px,$r:-1px,$t:0,$b:0);
@@ -68,11 +72,14 @@
       width:80%;
       text-align:center;
       margin:0 auto;
+      position:relative;
       @include flx(order,1);
       &:last-child{
+        text-align:left;
         @include flx(order,3);
         margin-top:4em;
         font-size:.96em;
+        height:8em;
         @include med(){
           font-size:.6em;
         }
@@ -86,19 +93,43 @@
         letter-spacing:.1em;
       }
     }
+    .ch-t-item{
+      @include abs($t:5em);
+      width:44%;
+      &:nth-child(1){
+        text-align:right;
+      }
+      &:nth-child(2){
+        right:0;
+      }
+    }
     .choose{
-      width:30em;
-      height:9/16*30em;
+      width:24em;
+      height:9/16*24em;
       margin-top:5em;
       position:relative;
       cursor:pointer;
       @include flx(order,2);
       -webkit-tap-highlight-color: rgba(0,0,0,0);
       &:nth-child(1){
-        margin-left:1.5em;
+        margin-left:7.5em;
+        @include med(){
+          &:hover{
+            &+.choose+.ch-hover{
+              opacity:1;
+            }
+          }
+        }
       }
       &:nth-child(2){
-        margin-right:1.5em;
+        margin-right:7.5em;
+        @include med(){
+          &:hover{
+            &+.ch-hover+.ch-hover{
+              opacity:1;
+            }
+          }
+        }
       }
       div{
         font-size:2.2em;
@@ -109,10 +140,20 @@
         @include center($t:-1.5em);
       }
     }
+    .ch-hover{
+      pointer-events:none;
+      @include abs($l:0,$t:0);
+      width:100%;
+      opacity:0;
+      @include trs('opacity #{$anim} ease-in-out');
+    }
     .g-bg,.g-btn,.g-hand,.g-garb-img,.g-g{
       @include abs($l:0,$t:0);
       width:100%;
       pointer-events:none;
+    }
+    .g-bg{
+      opacity:0;
     }
     .g-close,.g-ctrl{
       position:absolute;
